--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.79.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
